@@ -53,7 +53,7 @@ goto JavaFail
   echo Please install Java or, if present but not in the path, set this environment variable via the following command:
   echo    set JAVA_HOME=[path to Java]
   echo Example:
-  echo    set JAVA_HOME=C:\Program Files\Java\jdk6
+  echo    set JAVA_HOME=C:\Program Files\Java\jdk8
   echo.
   set error=1
 goto end
@@ -100,7 +100,7 @@ goto checkDataDir
 :checkDataDir
   rem GEOSERVER_DATA_DIR not defined
   if "%GEOSERVER_DATA_DIR%" == "" goto noDataDir
-  goto run
+  goto setMarlinRenderer
 
 :noDataDir
   rem if GEOSERVER_DATA_DIR is not defined then use GEOSERVER_HOME/data_dir/
@@ -122,15 +122,24 @@ goto end
   echo Temporarily setting GEOSERVER_DATA_DIR to the following directory:
   echo %GEOSERVER_DATA_DIR%
   echo.
+goto setMarlinRenderer
+
+:setMarlinRenderer
+  cd %GEOSERVER_HOME%
+  for /f "delims=" %%i in ('dir /b/s "%GEOSERVER_HOME%\webapps\geoserver\WEB-INF\lib\marlin*.jar"') do set MARLIN_JAR=%%i
+  if "%MARLIN_JAR%" == "" (
+    echo Marlin renderer jar not found
+    goto run
+  )
+  set MARLIN_ENABLER=-Xbootclasspath/a:"%MARLIN_JAR%" -Dsun.java2d.renderer=org.marlin.pisces.MarlinRenderingEngine
+  set JAVA_OPTS=%JAVA_OPTS% %MARLIN_ENABLER%
 goto run
 
-
 :run
-  if "%JAVA_OPTS%" == "" (set JAVA_OPTS=-XX:MaxPermSize=128m)
   cd %GEOSERVER_HOME%
   echo Please wait while loading GeoServer...
   echo.
-  "%RUN_JAVA%" "%JAVA_OPTS%" -DGEOSERVER_DATA_DIR="%GEOSERVER_DATA_DIR%" -Djava.awt.headless=true -DSTOP.PORT=8079 -DSTOP.KEY=geoserver -jar start.jar
+  "%RUN_JAVA%" %JAVA_OPTS% -DGEOSERVER_DATA_DIR="%GEOSERVER_DATA_DIR%" -Djava.awt.headless=true -DSTOP.PORT=8079 -DSTOP.KEY=geoserver -jar start.jar
   cd bin
 goto end
 
