@@ -5,19 +5,27 @@
 # $Id$
 # -----------------------------------------------------------------------------
 
-# Make sure prerequisite environment variables are set
-if [ -z "$JAVA_HOME" ]; then
-  echo "The JAVA_HOME environment variable is not defined"
-  echo "This environment variable is needed to run this program"
+# Guard against misconfigured JAVA_HOME
+if [ ! -z "$JAVA_HOME" -a ! -x "$JAVA_HOME"/bin/java ]; then
+  echo "The JAVA_HOME environment variable is set but JAVA_HOME/bin/java"
+  echo "is missing or not executable:"
+  echo "    JAVA_HOME=$JAVA_HOME"
+  echo "Please either set JAVA_HOME so that the Java runtime is JAVA_HOME/bin/java"
+  echo "or unset JAVA_HOME to use the Java runtime on the PATH."
   exit 1
 fi
-if [ ! -r "$JAVA_HOME"/bin/java ]; then
-  echo "The JAVA_HOME environment variable is not defined correctly"
-  echo "This environment variable is needed to run this program"
+
+# Find java from JAVA_HOME or PATH
+if [ ! -z "$JAVA_HOME" ]; then
+  _RUNJAVA="$JAVA_HOME"/bin/java
+elif [ ! -z "$(which java)" ]; then
+  _RUNJAVA=java
+else
+  echo "A Java runtime (java) was not found in JAVA_HOME/bin or on the PATH."
+  echo "Please either set the JAVA_HOME environment variable so that the Java runtime"
+  echo "is JAVA_HOME/bin/java or add the Java runtime to the PATH."
   exit 1
 fi
-# Set standard commands for invoking Java.
-_RUNJAVA="$JAVA_HOME"/bin/java
 
 if [ -z $GEOSERVER_HOME ]; then
   #If GEOSERVER_HOME not set then guess a few locations before giving
@@ -61,14 +69,12 @@ if [ -z $GEOSERVER_DATA_DIR ]; then
     fi
 fi
 
-# if not told otherwise pump up the permgen
-if [ -z "$JAVA_OPTS" ]; then
-  export JAVA_OPTS="-XX:MaxPermSize=128m"
-fi 
-
 cd "$GEOSERVER_HOME"
+
+export MARLIN_JAR=`find \`pwd\` -name "marlin*.jar" | head -1`
+export MARLIN_ENABLER="-Xbootclasspath/a:$MARLIN_JAR -Dsun.java2d.renderer=org.marlin.pisces.MarlinRenderingEngine"
 
 echo "GEOSERVER DATA DIR is $GEOSERVER_DATA_DIR"
 #added headless to true by default, if this messes anyone up let the list
 #know and we can change it back, but it seems like it won't hurt -ch
-exec "$_RUNJAVA" $JAVA_OPTS -DGEOSERVER_DATA_DIR="$GEOSERVER_DATA_DIR" -Djava.awt.headless=true -DSTOP.PORT=8079 -DSTOP.KEY=geoserver -jar start.jar 
+exec "$_RUNJAVA" $JAVA_OPTS $MARLIN_ENABLER -DGEOSERVER_DATA_DIR="$GEOSERVER_DATA_DIR" -Djava.awt.headless=true -DSTOP.PORT=8079 -DSTOP.KEY=geoserver -jar start.jar 
